--- a/_HTML/table6.html
+++ b/_HTML/table6.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table6</title>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
+                <li><a href="My Resume.html">My Resume</a></li>
+                <li><a href="YoutubeEmbed.html">Youtube</a></li>
+            </ul>
+            
+        </nav>
+    </header>
     <table border="2" cellspacing='0' cellpadding="3">
 
 
