--- a/_HTML/Form label fieldset legend radio checkbox textarea reset submit.html
+++ b/_HTML/Form label fieldset legend radio checkbox textarea reset submit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phita ghor</title>
+    <link rel="stylesheet" href="nav.css">
     <style>
 
         label{
@@ -16,8 +17,14 @@
 <body>
 
     <header>
-
-    </header>
+        <nav>
+            <ul>
+                <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
+                <li><a href="My Resume.html">My Resume</a></li>
+                <li><a href="YoutubeEmbed.html">Youtube</a></li>
+            </ul>
+            
+        </nav>
 
     <main>
 
