--- a/_HTML/YoutubeEmbed.html
+++ b/_HTML/YoutubeEmbed.html
@@ -11,11 +11,19 @@
         <nav>
             <ul>
                 <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
-                <li><a href="My Resume.html">My Resume</a></li>
+                <li><a href="My Resume.html">My Resume</a>
+                    <ul class="dropdown">
+                        <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
+                        <li><a href="My Resume.html">My Resume</a></li>
+                        <li><a href="YoutubeEmbed.html">Youtube</a></li>
+                    </ul>
+                
+                </li>
                 <li><a href="YoutubeEmbed.html">Youtube</a></li>
             </ul>
             
         </nav>
+
     <iframe controls width="560" height="315" src="https://www.youtube.com/embed/nCD2hj6zJEc?si=1UTznVjoylwq7e2g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
