--- a/_HTML/My Resume.html
+++ b/_HTML/My Resume.html
@@ -11,11 +11,19 @@
         <nav>
             <ul>
                 <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
-                <li><a href="My Resume.html">My Resume</a></li>
+                <li><a href="My Resume.html">My Resume</a>
+                    <ul class="dropdown">
+                        <li><a href="Form label fieldset legend radio checkbox textarea reset submit.html">Form</a></li>
+                        <li><a href="My Resume.html">My Resume</a></li>
+                        <li><a href="YoutubeEmbed.html">Youtube</a></li>
+                    </ul>
+                
+                </li>
                 <li><a href="YoutubeEmbed.html">Youtube</a></li>
             </ul>
             
         </nav>
+
     <table border="1" cellspacing="0" cellpadding="2" width="100%" height="100%">
         <tr>
             <td align="center">
